// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventOrGroupExtraDetails details when mentioned 1`] = `
<div>
  <div
    class="css-7jorpt-GroupExtra e12ld8r34"
  >
    <div
      class="css-trnaid-Wrapper exuvsu52"
    >
      <div
        class="css-1q7u6y8-AvatarWrapper exuvsu51"
      />
      <div
        class="css-ecjcgo-IdWrapper exuvsu50"
      >
        shortId
      </div>
    </div>
    <div
      class="css-xdyng2-Wrapper e1pqcbf22"
    >
      <svg
        class="css-1ounr7j-StyledIconClock e1pqcbf20"
        fill="#80708F"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.52A6.48,6.48,0,1,0,14.48,8,6.49,6.49,0,0,0,8,1.52Z"
        />
        <path
          d="M11.62,8.75H8A.76.76,0,0,1,7.25,8V2.88a.75.75,0,1,1,1.5,0V7.25h2.87a.75.75,0,0,1,0,1.5Z"
        />
      </svg>
      <time
        aria-describedby="tooltip-bjv3w72a9w"
        datetime="2017-07-25T22:56:12.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        3mo ago
      </time>
      <span
        class="hidden-xs hidden-sm css-4l1cp-Separator e1pqcbf21"
      >
         | 
      </span>
      <time
        aria-describedby="tooltip-7s10zw5oaa"
        class="hidden-xs hidden-sm"
        datetime="2017-07-01T02:06:02.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        4mo old
      </time>
    </div>
    <a
      class="comments css-1kyxqu4-Link-CommentsLink e12ld8r32"
      href="/organizations/org-slug/issues/groupId/activity/"
    >
      <svg
        fill="#268D75"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M.94,16a.73.73,0,0,1-.47-.17A.74.74,0,0,1,.21,15l.93-3.92A6.83,6.83,0,0,1,0,7.35c0-4,3.59-7.3,8-7.3s8,3.28,8,7.3-3.59,7.29-8,7.29a8.59,8.59,0,0,1-3.11-.58L1.27,15.87A.8.8,0,0,1,.94,16Zm1.59-5.48a.74.74,0,0,1,.15.65L2,13.81l2.49-1.24a.73.73,0,0,1,.63,0A7,7,0,0,0,8,13.14c3.58,0,6.5-2.6,6.5-5.79S11.58,1.55,8,1.55s-6.5,2.6-6.5,5.8A5.32,5.32,0,0,0,2.53,10.47Z"
        />
      </svg>
      <span>
        14
      </span>
    </a>
    <span
      class="css-vmqgsk-EventAnnotation-AnnotationNoMargin-LoggerAnnotation e12ld8r30"
    >
      <a
        class="css-ta9xa3-Link e1ycxor00"
        href="/organizations/org-slug/issues/?query=logger%3Ajavascript%20logger"
      >
        javascript logger
      </a>
    </span>
    <span
      class="css-5mgy4h-EventAnnotation-AnnotationNoMargin e12ld8r31"
    >
      annotation1
    </span>
    <span
      class="css-5mgy4h-EventAnnotation-AnnotationNoMargin e12ld8r31"
    >
      annotation2
    </span>
  </div>
</div>
`;

exports[`EventOrGroupExtraDetails renders all details 1`] = `
<div>
  <div
    class="css-7jorpt-GroupExtra e12ld8r34"
  >
    <div
      class="css-trnaid-Wrapper exuvsu52"
    >
      <div
        class="css-1q7u6y8-AvatarWrapper exuvsu51"
      />
      <div
        class="css-ecjcgo-IdWrapper exuvsu50"
      >
        shortId
      </div>
    </div>
    <div
      class="css-xdyng2-Wrapper e1pqcbf22"
    >
      <svg
        class="css-1ounr7j-StyledIconClock e1pqcbf20"
        fill="#80708F"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.52A6.48,6.48,0,1,0,14.48,8,6.49,6.49,0,0,0,8,1.52Z"
        />
        <path
          d="M11.62,8.75H8A.76.76,0,0,1,7.25,8V2.88a.75.75,0,1,1,1.5,0V7.25h2.87a.75.75,0,0,1,0,1.5Z"
        />
      </svg>
      <time
        aria-describedby="tooltip-wh80blyp50"
        datetime="2017-07-25T22:56:12.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        3mo ago
      </time>
      <span
        class="hidden-xs hidden-sm css-4l1cp-Separator e1pqcbf21"
      >
         | 
      </span>
      <time
        aria-describedby="tooltip-41ofbz38t3"
        class="hidden-xs hidden-sm"
        datetime="2017-07-01T02:06:02.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        4mo old
      </time>
    </div>
    <a
      class="comments css-1kyxqu4-Link-CommentsLink e12ld8r32"
      href="/organizations/org-slug/issues/groupId/activity/"
    >
      <svg
        fill="currentColor"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M.94,16a.73.73,0,0,1-.47-.17A.74.74,0,0,1,.21,15l.93-3.92A6.83,6.83,0,0,1,0,7.35c0-4,3.59-7.3,8-7.3s8,3.28,8,7.3-3.59,7.29-8,7.29a8.59,8.59,0,0,1-3.11-.58L1.27,15.87A.8.8,0,0,1,.94,16Zm1.59-5.48a.74.74,0,0,1,.15.65L2,13.81l2.49-1.24a.73.73,0,0,1,.63,0A7,7,0,0,0,8,13.14c3.58,0,6.5-2.6,6.5-5.79S11.58,1.55,8,1.55s-6.5,2.6-6.5,5.8A5.32,5.32,0,0,0,2.53,10.47Z"
        />
      </svg>
      <span>
        14
      </span>
    </a>
    <span
      class="css-vmqgsk-EventAnnotation-AnnotationNoMargin-LoggerAnnotation e12ld8r30"
    >
      <a
        class="css-ta9xa3-Link e1ycxor00"
        href="/organizations/org-slug/issues/?query=logger%3Ajavascript%20logger"
      >
        javascript logger
      </a>
    </span>
    <span
      class="css-5mgy4h-EventAnnotation-AnnotationNoMargin e12ld8r31"
    >
      annotation1
    </span>
    <span
      class="css-5mgy4h-EventAnnotation-AnnotationNoMargin e12ld8r31"
    >
      annotation2
    </span>
  </div>
</div>
`;

exports[`EventOrGroupExtraDetails renders assignee and status 1`] = `
<div>
  <div
    class="css-7jorpt-GroupExtra e12ld8r34"
  >
    <div
      class="css-trnaid-Wrapper exuvsu52"
    >
      <div
        class="css-1q7u6y8-AvatarWrapper exuvsu51"
      />
      <div
        class="css-ecjcgo-IdWrapper exuvsu50"
      >
        shortId
      </div>
    </div>
    <div
      class="css-xdyng2-Wrapper e1pqcbf22"
    >
      <svg
        class="css-1ounr7j-StyledIconClock e1pqcbf20"
        fill="#80708F"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.52A6.48,6.48,0,1,0,14.48,8,6.49,6.49,0,0,0,8,1.52Z"
        />
        <path
          d="M11.62,8.75H8A.76.76,0,0,1,7.25,8V2.88a.75.75,0,1,1,1.5,0V7.25h2.87a.75.75,0,0,1,0,1.5Z"
        />
      </svg>
      <time
        aria-describedby="tooltip-hp70ifj8eb"
        datetime="2017-07-25T22:56:12.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        3mo ago
      </time>
      <span
        class="hidden-xs hidden-sm css-4l1cp-Separator e1pqcbf21"
      >
         | 
      </span>
      <time
        aria-describedby="tooltip-8qkkw4zry8"
        class="hidden-xs hidden-sm"
        datetime="2017-07-01T02:06:02.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        4mo old
      </time>
    </div>
    <a
      class="comments css-1kyxqu4-Link-CommentsLink e12ld8r32"
      href="/organizations/org-slug/issues/groupId/activity/"
    >
      <svg
        fill="currentColor"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M.94,16a.73.73,0,0,1-.47-.17A.74.74,0,0,1,.21,15l.93-3.92A6.83,6.83,0,0,1,0,7.35c0-4,3.59-7.3,8-7.3s8,3.28,8,7.3-3.59,7.29-8,7.29a8.59,8.59,0,0,1-3.11-.58L1.27,15.87A.8.8,0,0,1,.94,16Zm1.59-5.48a.74.74,0,0,1,.15.65L2,13.81l2.49-1.24a.73.73,0,0,1,.63,0A7,7,0,0,0,8,13.14c3.58,0,6.5-2.6,6.5-5.79S11.58,1.55,8,1.55s-6.5,2.6-6.5,5.8A5.32,5.32,0,0,0,2.53,10.47Z"
        />
      </svg>
      <span>
        14
      </span>
    </a>
    <span
      class="css-vmqgsk-EventAnnotation-AnnotationNoMargin-LoggerAnnotation e12ld8r30"
    >
      <a
        class="css-ta9xa3-Link e1ycxor00"
        href="/organizations/org-slug/issues/?query=logger%3Ajavascript%20logger"
      >
        javascript logger
      </a>
    </span>
    <span
      class="css-5mgy4h-EventAnnotation-AnnotationNoMargin e12ld8r31"
    >
      annotation1
    </span>
    <span
      class="css-5mgy4h-EventAnnotation-AnnotationNoMargin e12ld8r31"
    >
      annotation2
    </span>
    <div>
      <span>
        <span>
          Assigned to 
        </span>
        <span>
          Assignee Name
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`EventOrGroupExtraDetails renders last and first seen 1`] = `
<div>
  <div
    class="css-7jorpt-GroupExtra e12ld8r34"
  >
    <div
      class="css-xdyng2-Wrapper e1pqcbf22"
    >
      <svg
        class="css-1ounr7j-StyledIconClock e1pqcbf20"
        fill="#80708F"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.52A6.48,6.48,0,1,0,14.48,8,6.49,6.49,0,0,0,8,1.52Z"
        />
        <path
          d="M11.62,8.75H8A.76.76,0,0,1,7.25,8V2.88a.75.75,0,1,1,1.5,0V7.25h2.87a.75.75,0,0,1,0,1.5Z"
        />
      </svg>
      <time
        aria-describedby="tooltip-agknjuh67o"
        datetime="2017-07-25T22:56:12.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        3mo ago
      </time>
      <span
        class="hidden-xs hidden-sm css-4l1cp-Separator e1pqcbf21"
      >
         | 
      </span>
      <time
        aria-describedby="tooltip-lu5kcdxktm"
        class="hidden-xs hidden-sm"
        datetime="2017-07-01T02:06:02.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        4mo old
      </time>
    </div>
  </div>
</div>
`;

exports[`EventOrGroupExtraDetails renders only first seen 1`] = `
<div>
  <div
    class="css-7jorpt-GroupExtra e12ld8r34"
  >
    <div
      class="css-xdyng2-Wrapper e1pqcbf22"
    >
      <svg
        class="css-1ounr7j-StyledIconClock e1pqcbf20"
        fill="#80708F"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.52A6.48,6.48,0,1,0,14.48,8,6.49,6.49,0,0,0,8,1.52Z"
        />
        <path
          d="M11.62,8.75H8A.76.76,0,0,1,7.25,8V2.88a.75.75,0,1,1,1.5,0V7.25h2.87a.75.75,0,0,1,0,1.5Z"
        />
      </svg>
      <time
        aria-describedby="tooltip-r212zbavip"
        class="hidden-xs hidden-sm"
        datetime="2017-07-01T02:06:02.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        4mo old
      </time>
    </div>
  </div>
</div>
`;

exports[`EventOrGroupExtraDetails renders only last seen 1`] = `
<div>
  <div
    class="css-7jorpt-GroupExtra e12ld8r34"
  >
    <div
      class="css-xdyng2-Wrapper e1pqcbf22"
    >
      <svg
        class="css-1ounr7j-StyledIconClock e1pqcbf20"
        fill="#80708F"
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
      >
        <path
          d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.52A6.48,6.48,0,1,0,14.48,8,6.49,6.49,0,0,0,8,1.52Z"
        />
        <path
          d="M11.62,8.75H8A.76.76,0,0,1,7.25,8V2.88a.75.75,0,1,1,1.5,0V7.25h2.87a.75.75,0,0,1,0,1.5Z"
        />
      </svg>
      <time
        aria-describedby="tooltip-1d48v0p41o"
        datetime="2017-07-25T22:56:12.000Z"
        style="text-decoration: underline dotted #80708F;"
      >
        3mo ago
      </time>
    </div>
  </div>
</div>
`;
